# harbor

./: .dockerignore  .env.development  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  VERSION  alembic.ini  bandit.yaml  check_environment.py  check_mypy.sh  debug_pydantic_env.py  debug_test_config.py  deep_debug_pydantic.py  mypy.ini  pyproject.toml  security.json  simple_env_test.py  test-images.sh  test_config.py  test_db_implementation.py  test_definitive_fix.py  test_security_middleware.py
.github/: PULL_REQUEST_TEMPLATE.md  dependency-review-config.yml  license-overrides.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/get-version/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-pr.yml  cache-results.yml  cache-warmer.yml  ci-cd.yml  cleanup-unknown.yml  codeql-config.yml  codeql.yml  debug.yml  dependency-review.yml  dependency-review.yml   docker-build-fresh.yml  docker-build-original.yml  docker-build.yml  pr-comment.yml  release.yml  security-scan.yml  security.yml  test.yml  update-changelog.yml  version-bump.yml
app/: __init__.py  config.py  constants.py  exceptions.py  main.py
app/api/: auth.py
app/auth/: __init__.py  api_keys.py  csrf.py  dependencies.py  manager.py  models.py  password.py  sessions.py
app/cli/: reset_admin.py
app/config/: base.py  enhanced.py  feature.py  feature_flags.py  validator.py
app/db/: __init__.py  base.py  config.py  init.py  session.py
app/db/migrations/: env.py  script.py.mako
app/db/models/: __init__.py  api_key.py  audit.py  container.py  job.py  policy.py  registry.py  settings.py  user.py
app/db/repositories/: __init__.py  api_key.py  base.py  container.py  user.py
app/registry/: __init__.py  auth.py  cache.py  client.py  models.py  resolver.py
app/security/: __init__.py  headers.py  rate_limit.py  validation.py
app/utils/: __init__.py  logging.py
app/web/static/js/: __init__.py
app/web/static/js/components/: __init__.py
app/web/templates/: __init__.py
app/web/templates/auth/: __init__.py
config/: development.yaml  homelab.yaml  production.yaml  redis-dev.conf  registry-dev.yml
config/monitoring/: prometheus.yml
config/monitoring/grafana/datasources/: prometheus.yml
deploy/docker/: Dockerfile  Dockerfile.dev  docker-compose-rpi.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
deploy/security/: apparmor-harbor  seccomp-harbor.json
docs/: development.md
docs/development/: pycharm-setup.md  releases.md
examples/home-lab/basic/: docker-compose.yml
examples/home-lab/raspberry-pi/: docker-compose.yml
examples/home-lab/with-monitoring/: docker-compose.yml
idea/: misc.xml
requirements/: base.txt  development.txt  production.txt  test.txt
scripts/: build-optimized.sh  build.sh  check-ci-readiness.sh  detect_platform.py  health_check.py  init-postgres-dev.sql  quick-test.sh  setup-release-automation.sh  test-multi-platform.sh  test_config.py  test_config_direct.py  test_existing_config.py  validate_config.py
scripts/dev/: check_licenses.py  down.sh  logs.sh  run_all_tests.sh  run_checks.sh  run_tests.sh  setup-platform.sh  setup.sh  validate-multiarch.py  validate_structure.sh
scripts/release/: release.sh  validate_version.py
tests/: __init__.py  conftest.py
tests/fixtures/: nginx.conf
tests/integration/: __init__.py  test_api_key_flow.py  test_auth_api_keys.py  test_auth_integration.py  test_database.py  test_placeholder.py  test_smoke_integration.py
tests/performance/: test_performance_placeholder.py
tests/security/: test_security_basics.py
tests/unit/: __init__.py  test_config.py  test_smoke_unit.py
tests/unit/auth/: test_api_key_integration.py  test_api_key_manager.py  test_api_keys.py  test_password.py  test_sessions.py
tests/unit/db/: test_models.py
